--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "scripts": {
+    "lint-nginx": "gixy nginx.conf",
+    "lint-scss": "sass-lint src/**/*.scss --verbose --no-exit",
+    "test": "yarn run lint-nginx && yarn run lint-scss",
     "build": "yarn build-css && bundle exec jekyll build",
     "build-css": "node-sass --include-path node_modules src/scss --output build",
     "watch": "yarn build-css -w",
@@ -8,6 +11,7 @@
   },
   "dependencies": {
     "node-sass": "^4.9.2",
+    "sass-lint": "^1.10.2",
     "vanilla-framework": "^1.8.0"
   }
 }
