--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
     "lint-nginx": "gixy nginx.conf",
     "lint-scss": "sass-lint src/**/*.scss --verbose --no-exit",
     "test": "yarn run lint-nginx && yarn run lint-scss",
-    "build": "yarn build-css && bundle exec jekyll build",
-    "build-css": "cp node_modules/global-nav/dist/index.js src/js/global-nav.js && node-sass --include-path node_modules src/scss --output build",
+    "build": "cp node_modules/global-nav/dist/index.js src/js/global-nav.js && yarn build-css && bundle exec jekyll build",
+    "build-css": "node-sass --include-path node_modules src/scss --output build",
     "watch": "yarn build-css -w",
     "serve": "bundle exec jekyll serve -P ${PORT} -H 0.0.0.0",
     "clean": "rm -rf node_modules yarn-error.log css css *.log *.sqlite _site/ build/ .jekyll-metadata .bundle"
