--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,23 @@ defaults: &defaults
     - image: canonicalwebteam/dev
 
 jobs:
+  test-site:
+    <<: *defaults
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: yarn && bundle install --path vendor/bundle
+      - run:
+          name: Build the site resources
+          command: yarn run build
+      - run:
+          name: Run the site server
+          command: bundle exec jekyll serve -P 80 -H 0.0.0.0
+          background: true
+      - run:
+          name: Check site is accessible
+          command: sleep 3 && curl --head --fail --retry-delay 5 --retry 10  --retry-connrefused http://localhost
   nginx-lint:
     <<: *defaults
     steps:
@@ -31,3 +48,5 @@ workflows:
     jobs:
       - nginx-lint
       - scss-lint
+      - test-site
+
