--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@canonical/global-nav": "2.4.3",
+    "postcss": "8.1.1",
     "vanilla-framework": "2.19.0"
   },
   "devDependencies": {
