--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "test": "yarn run lint-nginx && yarn run lint-scss",
     "build": "yarn run build-css && yarn run build-js && yarn run build-site",
     "build-site": "eleventy --formats=html,css,js,map,svg --input=src --output=_site",
-    "build-css": "node-sass --include-path node_modules src/sass --source-map true --output-style compressed --output src/css && postcss --use autoprefixer --replace 'src/css/**/*.css'",
+    "build-css": "sass src/sass/styles.scss src/css/styles.css --load-path=node_modules --style=compressed && postcss --map false --use autoprefixer --replace 'src/css/**/*.css'",
     "build-js": "yarn run copy-cookie-policy && yarn run copy-global-nav",
     "copy-cookie-policy": "mkdir -p src/js/build && cp node_modules/@canonical/cookie-policy/build/js/cookie-policy.js src/js/build",
     "copy-global-nav": "mkdir -p src/js/build && cp node_modules/@canonical/global-nav/dist/global-nav.js src/js/build",
@@ -24,7 +24,7 @@
   "devDependencies": {
     "@11ty/eleventy": "0.11.1",
     "concurrently": "5.3.0",
-    "node-sass": "5.0.0",
+    "sass": "1.27.0",
     "postcss-cli": "8.3.1",
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0",
