--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -64,3 +64,17 @@ jobs:
 
       - name: Lint scss
         run: yarn lint-scss
+
+  inclusive-naming-check:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: woke
+        uses: canonical-web-and-design/inclusive-naming@main
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          reporter: github-pr-check
+          fail-on-error: true
