--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -12,7 +12,7 @@ jobs:
 
     - name: Run image
       run: |
-        docker run -d -p 80:80 mir-server-io
+        docker run -d --env SECRET_KEY=dev-key -p 80:80 mir-server-io
         sleep 1
         curl --head --fail --retry-delay 5 --retry 10 --retry-connrefused http://localhost
   
@@ -35,22 +35,6 @@ jobs:
         run: |
           dotrun & curl --head --fail --retry-delay 1 --retry 30 --retry-connrefused http://localhost:8028
 
-  lint-nginx:
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.7'
-
-      - name: Install gixy
-        run: pip3 install gixy
-
-      - name: Lint nginx configuration files
-        run: yarn lint-nginx
-
   lint-scss:
     runs-on: ubuntu-latest
 
@@ -62,6 +46,46 @@ jobs:
 
       - name: Lint scss
         run: yarn lint-scss
+  
+  lint-python:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install node dependencies
+        run: yarn install --immutable
+
+      - name: Install python dependencies
+        run: |
+          python3 -m pip install --upgrade pip
+          sudo pip3 install flake8 black
+      - name: Lint python
+        run: yarn lint-python
+        
+  test-python:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install requirements
+        run: |
+          sudo apt-get update && sudo apt-get install --yes python3-setuptools
+          sudo pip3 install -r requirements.txt
+      - name: Install dependencies
+        run: sudo pip3 install coverage
+
+      - name: Install node dependencies
+        run: yarn install --immutable
+
+      - name: Build resources
+        run: yarn build
+
+      - name: Run tests with coverage
+        run: |
+          SECRET_KEY=insecure_secret_key coverage run  --source=. -m unittest discover tests
+          bash <(curl -s https://codecov.io/bash) -cF python
 
   inclusive-naming-check:
     runs-on: ubuntu-latest
