--- a/package.json
+++ b/package.json
@@ -1,33 +1,46 @@
 {
   "scripts": {
-    "start": "yarn run build && concurrently --raw 'yarn run watch-css' 'yarn run watch-js' 'yarn run serve'",
-    "lint-nginx": "gixy nginx.conf",
-    "lint-scss": "stylelint src/**/*.scss",
-    "test": "yarn run lint-nginx && yarn run lint-scss",
-    "build": "yarn run build-css && yarn run build-js && yarn run build-site",
-    "build-site": "eleventy --formats=html,css,js,map,svg --input=src --output=_site",
-    "build-css": "sass src/sass/styles.scss src/css/styles.css --load-path=node_modules --style=compressed && postcss --map false --use autoprefixer --replace 'src/css/**/*.css'",
-    "build-js": "yarn run copy-cookie-policy && yarn run copy-global-nav",
-    "copy-cookie-policy": "mkdir -p src/js/build && cp node_modules/@canonical/cookie-policy/build/js/cookie-policy.js src/js/build",
-    "copy-global-nav": "mkdir -p src/js/build && cp node_modules/@canonical/global-nav/dist/global-nav.js src/js/build",
-    "watch-css": "watch -p 'src/sass/**/*.scss' -c 'yarn run build-css'",
-    "watch-js": "watch -p 'node_modules/global-nav/dist/index.js' -c 'yarn run build-js'",
-    "serve": "eleventy --formats=html,scss,css,js,map,svg --input=src --output=_site --watch --serve --port $PORT",
-    "clean": "rm -rf node_modules yarn-error.log css css *.log *.sqlite _site/ build/ .jekyll-metadata .bundle"
+    "clean": "rm -rf node_modules yarn-error.log css static/css *.log *.sqlite _site/ build/ .jekyll-metadata .bundle",
+    "watch": "watch -p 'static/sass/**/*' -p 'static/js/**/*.js' -c 'yarn run build'",
+    "watch-js": "watch -p 'static/js/src/**/!(*.test)*.{js,jsx,ts,tsx}' -p 'static/js/data/**/*.js' -p 'static/js/third-party/**/*.js' -c 'yarn run build-js && tsc -noEmit'",
+    "watch-scss": "watch -p 'static/sass/**/*.scss' -c 'yarn run build-scss'",
+    "build": "yarn run build-css && yarn run build-js",
+    "build-css": "sass static/sass:static/css --load-path=node_modules --style=compressed && postcss --use autoprefixer --replace 'static/css/**/*.css' --no-map",
+    "build-js": "node build.js && yarn run build-global-nav && yarn run build-cookie-policy",
+    "build-cookie-policy": "mkdir -p static/js/build/ && cp node_modules/@canonical/cookie-policy/build/js/cookie-policy.js static/js/build/",
+    "build-global-nav": "mkdir -p static/js/build/ && cp node_modules/@canonical/global-nav/dist/global-nav.js static/js/build/",
+    "format-python": "black --line-length 79 webapp",
+    "lint-python": "flake8 webapp tests && black --check --line-length 79 webapp tests",
+    "lint-js": "eslint static/js",
+    "lint-scss": "stylelint static/**/*.scss",
+    "serve": "./entrypoint 0.0.0.0:${PORT}",
+    "start": "yarn run build && concurrently --raw 'yarn run watch' 'yarn run serve'",
+    "test": "yarn run lint-scss && yarn run lint-python && yarn run test-python",
+    "test-python": "python3 -m unittest discover tests"
   },
   "dependencies": {
     "@canonical/global-nav": "2.7.0",
     "@canonical/cookie-policy": "3.4.0",
-    "postcss": "8.4.5",
     "vanilla-framework": "3.3.0"
   },
   "devDependencies": {
-    "@11ty/eleventy": "0.12.1",
+    "autoprefixer": "9.7.5",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-preset-env": "^1.7.0",
+    "esbuild": "0.14.10",
     "concurrently": "5.3.0",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "6.10.1",
+    "eslint-plugin-prettier": "3.1.2",
+    "postcss": "8.4.5",
+    "prettier": "2.0.2",
     "sass": "1.45.2",
     "postcss-cli": "8.3.1",
     "stylelint": "13.13.1",
     "stylelint-config-standard": "20.0.0",
-    "stylelint-order": "4.1.0"
+    "stylelint-order": "4.1.0",
+    "watch-cli": "0.2.3"
   }
 }
