Add Ubuntu Frame docs

--- a/konf/site.yaml
+++ b/konf/site.yaml
@@ -2,6 +2,17 @@ domain: mir-server.io
 
 image: prod-comms.docker-registry.canonical.com/mir-server.io
 
+env:
+  - name: DISCOURSE_API_KEY
+    secretKeyRef:
+      key: ubuntu-api-key
+      name: discourse-api
+    
+  - name: SEARCH_API_KEY
+    secretKeyRef:
+      key: google-custom-search-key
+      name: google-api
+
 useProxy: false
 
 extraHosts:
