--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,11 +1,17 @@
 {
-  "extends": "stylelint-config-standard",
+  "extends": "stylelint-config-standard-scss",
   "plugins": [
     "stylelint-order"
   ],
   "ignoreFiles": ["static/sass/_hljs.scss"],
   "rules": {
     "order/properties-alphabetical-order": true,
+    "no-invalid-position-at-import-rule": null,
+    "scss/at-mixin-pattern": null,
+    "scss/dollar-variable-pattern": null,
+    "scss/double-slash-comment-empty-line-before": null,
+    "scss/no-global-function-names": null,
+    "selector-class-pattern": null,
     "at-rule-no-unknown": [ true, {
       "ignoreAtRules": [
         "extend",
@@ -17,6 +23,6 @@
         "warn",
         "return"
         ]
-    } ],
+    } ]
   }
 }
