--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,5 @@ canonicalwebteam.flask-base==1.1.0
 canonicalwebteam.templatefinder==1.0.0
 canonicalwebteam.discourse==5.0.3
 canonicalwebteam.search==1.2.7
+canonicalwebteam.image-template==1.3.1
 vcrpy-unittest==0.1.7
