--- a/redirects.yaml
+++ b/redirects.yaml
@@ -1,3 +1,4 @@
+# redirect for old /doc paths
 doc/?: https://canonical-mir.readthedocs-hosted.com/stable/
 doc/index.*/?: https://canonical-mir.readthedocs-hosted.com/stable/
 doc/cppguide?: https://canonical-mir.readthedocs-hosted.com/stable/_static/cppguide/
@@ -10,3 +11,5 @@ doc/md_doc_kernel_requirements.*/?: https://canonical-mir.readthedocs-hosted.com
 doc/deprecated.*/?: https://canonical-mir.readthedocs-hosted.com/stable/api/page_deprecated/
 doc/md__h_a_c_k_i_n_g.*/?: https://github.com/canonical/mir/blob/main/HACKING.md
 doc/md__r_e_a_d_m_e.*/?: https://github.com/canonical/mir/blob/main/README.md
+#catch all for /doc
+doc/(?P<page>.*)/*: https://canonical-mir.readthedocs-hosted.com/stable/
