Redirect anything under 'cppguide'

--- a/redirects.yaml
+++ b/redirects.yaml
@@ -1,6 +1,6 @@
 # redirect for old /doc paths
 doc/?: https://canonical-mir.readthedocs-hosted.com/stable/
-doc/cppguide?: https://canonical-mir.readthedocs-hosted.com/stable/_static/cppguide/
+doc/cppguide.*: https://canonical-mir.readthedocs-hosted.com/stable/_static/cppguide/
 doc/component_reports.*: https://canonical-mir.readthedocs-hosted.com/stable/explanation/component_reports/
 doc/dso_versioning_guide.*: https://canonical-mir.readthedocs-hosted.com/stable/reference/dso_versioning_guide/
 doc/getting_and_using_mir.*: https://canonical-mir.readthedocs-hosted.com/stable/tutorial/
